--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Feng-Yi Liao"
   avatar           : "FengYiLiao.jpg"
-  bio              : "Incoming PhD student at UCSD"
+  bio              : "PhD student at UCSD"
   location         : "California, USA"
   employer         :
   pubmed           : 
