--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   #  url: /Awards/
   
 
-  # - title: "Publications"
-  #  url: /publications/
+  - title: "Publications"
+    url: /publications/
 
   - title: "CV"
     url: "https://fengyiliao.github.io/files/CV.pdf"
